{{$NEXT}}

0.010     2020-12-12 15:18:53-08:00 America/Los_Angeles

    - Fix win32

0.009     2020-12-10 22:46:18-08:00 America/Los_Angeles

    - Add fifo support

0.008     2020-12-10 20:35:19-08:00 America/Los_Angeles

    - Add write_burst, fits_in_burst(), and parts_needed()

0.007     2020-12-10 19:05:37-08:00 America/Los_Angeles

    - Fix takeover for non-linux platforms

0.006     2020-12-09 22:53:06-08:00 America/Los_Angeles

    - Make it possible to takeover an existing pipe

0.005     2020-12-09 21:12:51-08:00 America/Los_Angeles

    - Do not attempt to run on windows, dos, or os2

0.004     2020-12-08 20:22:17-08:00 America/Los_Angeles

    - Add stress test

0.003     2020-12-08 19:52:27-08:00 America/Los_Angeles

    - Work around POSIX undefined exceptions

0.002     2020-12-08 08:20:20-08:00 America/Los_Angeles

    - Only use ERESTART when present

0.001     2020-12-07 22:54:24-08:00 America/Los_Angeles

    - Initial Release (Lets see what platforms it breaks on!)