@@ -1,9 +1,14 @@
 use Test2::V0;
-use Test2::Require::RealFork;
 use Test2::IPC;
 use Atomic::Pipe;
 
 BEGIN { *PIPE_BUF = Atomic::Pipe->can('PIPE_BUF') }
+
+BEGIN {
+    my $path = __FILE__;
+    $path =~ s{[^/]+\.t$}{worker.pm};
+    require "./$path";
+}
 
 use POSIX qw/mkfifo/;
 use File::Temp qw/tempdir/;
@@ -18,19 +23,6 @@ unless (eval { mkfifo($fifo, 0700) or die "Failed to make fifo: $!" }) {
 
 my $r = Atomic::Pipe->read_fifo($fifo);
 
-$SIG{CHLD} = 'IGNORE';
-sub worker(&) {
-    my ($code) = @_;
-    my $pid = fork // die "Could not fork: $!";
-    return $pid if $pid;
-
-    my $ok = eval { $code->(); 1 };
-    my $err = $@;
-    exit(0) if $ok;
-    warn $err;
-    exit 255;
-}
-
 my $COUNT = 10_000;
 
 worker { my $w = Atomic::Pipe->write_fifo($fifo); $w->write_message("aaa" x PIPE_BUF) for 1 .. $COUNT };
@@ -38,6 +30,9 @@ worker { my $w = Atomic::Pipe->write_fifo($fifo); $w->write_message("bbb" x PIPE
 worker { my $w = Atomic::Pipe->write_fifo($fifo); $w->write_message("ccc" x PIPE_BUF) for 1 .. $COUNT };
 worker { my $w = Atomic::Pipe->write_fifo($fifo); $w->write_message("ddd" x PIPE_BUF) for 1 .. $COUNT };
 worker { my $w = Atomic::Pipe->write_fifo($fifo); $w->write_message("eee" x PIPE_BUF) for 1 .. $COUNT };
+
+# Without this windows blocks in the main thread and the other threads never do their work.
+sleep 4 if $^O eq 'MSWin32';
 
 my %seen;
 while (my $msg = $r->read_message) {
@@ -66,4 +61,5 @@ is(
     "Got all $COUNT messages from each process"
 );
 
+cleanup();
 done_testing;
